Visits (without icons)

--- a/force-app/main/default/classes/PSEService.cls
+++ b/force-app/main/default/classes/PSEService.cls
@@ -42,6 +42,7 @@ public without sharing class PSEService {
             'Clinical_Trial_Profile__r.Link_to_Medical_Record_Review__c',
             'Clinical_Trial_Profile__r.Link_to_Pre_screening__c',
             'Clinical_Trial_Profile__r.Baseline_Survey_URL__c',
+            'Clinical_Trial_Profile__r.Visit_Plan__c',
             'Participant__c',
             'Participant__r.First_Name__c',
             'Participant__r.Last_Name__c',
