Refactoring of TestService (add mock functionality)

--- a/force-app/main/default/classes/BaselineSurveyRemote.cls
+++ b/force-app/main/default/classes/BaselineSurveyRemote.cls
@@ -16,7 +16,8 @@ public class BaselineSurveyRemote {
             if(participantState.value != ParticipantService.ParticipantStates.PARTICIPANT) {
                 throw new BaselineSurveyException('Baseline Survey not available');
             }
-            List<Task> tasks = TaskService.getTasksCommon('Task_Code__c =\'' + TaskService.TASK_CODE_COMPLETE_BASELINE_SURVEY +'\' AND ' + TaskService.getOpenTasksFilter());
+            List<Task> tasks = TaskService.getInstance().getTasksCommon('Task_Code__c =\'' +
+                    TaskService.TASK_CODE_COMPLETE_BASELINE_SURVEY +'\' AND ' + TaskService.getInstance().getOpenTasksFilter());
             if(tasks.size() == 0) throw new BaselineSurveyException('Baseline survey already completed');
             if(participantState.pse.Clinical_Trial_Profile__r.Baseline_Survey_URL__c == null){
                 throw new BaselineSurveyException('Baseline Survey not defined');
