--- a/force-app/main/default/classes/LanguageSwitcherRemote.cls
+++ b/force-app/main/default/classes/LanguageSwitcherRemote.cls
@@ -40,9 +40,10 @@ public without sharing class LanguageSwitcherRemote {
                     LocaleSidKey = localeKey
             );
             //TODO Move this to another place:
-            List<Task> tasks = TaskService.getTasksCommon('Task_Code__c =\'' + TaskService.TASK_CODE_COMPLETE_YOUR_PROFILE +'\' AND ' + TaskService.getOpenTasksFilter());
+            List<Task> tasks = TaskService.getInstance().getTasksCommon('Task_Code__c =\'' +
+                    TaskService.TASK_CODE_COMPLETE_YOUR_PROFILE +'\' AND ' + TaskService.getInstance().getOpenTasksFilter());
             if(tasks.size() > 0){
-                TaskService.completeTask(tasks[0]);
+                TaskService.getInstance().completeTask(tasks[0]);
                 update tasks[0];
             }
         }catch (Exception e){
