--- a/force-app/main/default/classes/TasksRemote.cls
+++ b/force-app/main/default/classes/TasksRemote.cls
@@ -7,7 +7,7 @@ public class TasksRemote {
     @AuraEnabled
     public static List<Task> getPreviewTasks(){
         try {
-            return TaskService.getPreviewTasks();
+            return TaskService.getInstance().getPreviewTasks();
         }catch (Exception e){
             AuraHelper.throwException(e);
         }
@@ -29,7 +29,7 @@ public class TasksRemote {
         try{
             ParticipantTasks participantTasks = new ParticipantTasks();
             List<Task> openTasks = new List<Task>();
-            openTasks = TaskService.getOpenTasks();
+            openTasks = TaskService.getInstance().getOpenTasks();
             participantTasks.openTasksWrapper = new List<OpenTask>();
             for(Task task : openTasks){
                 OpenTask taskWrapper = new OpenTask();
@@ -37,7 +37,7 @@ public class TasksRemote {
                 participantTasks.openTasksWrapper.add(taskWrapper);
             }
 
-            participantTasks.completedTasks = TaskService.getCompletedTasks();
+            participantTasks.completedTasks = TaskService.getInstance().getCompletedTasks();
             createOriginatorsList(participantTasks.openTasksWrapper);
             return participantTasks;
         }catch (Exception e){
@@ -49,7 +49,7 @@ public class TasksRemote {
     @AuraEnabled
     public static ParticipantTasks ignoreTask(Id taskId){
         try{
-            TaskService.ignoreTask(taskId);
+            TaskService.getInstance().ignoreTask(taskId);
             return getParticipantTasks();
         }catch (Exception e){
             AuraHelper.throwException(e);
@@ -60,7 +60,7 @@ public class TasksRemote {
     @AuraEnabled
     public static ParticipantTasks completeTask(Id taskId){
         try{
-            TaskService.completeTask(taskId);
+            TaskService.getInstance().completeTask(taskId);
             return getParticipantTasks();
         }catch (Exception e){
             AuraHelper.throwException(e);
