--- a/force-app/main/default/classes/UserTriggerHandler.cls
+++ b/force-app/main/default/classes/UserTriggerHandler.cls
@@ -86,7 +86,7 @@ public class UserTriggerHandler {
                 if(user.ContactId != null){
                     Participant__c participant = participantsByContactIdMap.get(user.ContactId);
                     if(participant != null){
-                        tasksForInsert.add(TaskService.createCompleteYourProfileTask(user.Id, participant.Id, user.ContactId));
+                        tasksForInsert.add(TaskService.getInstance().createCompleteYourProfileTask(user.Id, participant.Id, user.ContactId));
                     }
                 }
             }
