--- a/force-app/main/default/classes/StudySiteService.cls
+++ b/force-app/main/default/classes/StudySiteService.cls
@@ -13,7 +13,7 @@ public without sharing class StudySiteService {
     public final static String PI_S_DECLINED_ACCEPTANCE = 'Declined (Acceptance)';
     //oldStatus/<actionType, newStatus>
     public final static Map<String, Map<String, String>> SS_CHANGE_STATUS_MAP = new Map<String, Map<String, String>>();
-    
+
     public final static List<String> STATUS_GROUP_ACCEPTED = new List<String>{
             PI_S_ACCEPTED,
             PI_S_ACCEPTED_A
@@ -104,33 +104,32 @@ public without sharing class StudySiteService {
     };
 
 
-    public static List<Study_Site__c> getStudySitesCommon(String filter){
+    public static List<Study_Site__c> getStudySitesCommon(String filter) {
         String query = 'SELECT ' + String.join(SS_COMMON_FIELDS, ',') +
                 ' FROM Study_Site__c ';
-        if(filter != null) query += ' WHERE ' + filter;
+        if (filter != null) query += ' WHERE ' + filter;
         System.debug('EXECUTE QUERY: ' + query);
         List<Study_Site__c> ssList = Database.query(query);
         TranslateHelper.translate(ssList);
         return ssList;
     }
 
-    public static List<Study_Site__c> getStudySitesCommon(String userMode, String filter, Boolean excludeDelegates){
+    public static List<Study_Site__c> getStudySitesCommon(String userMode, String filter, Boolean excludeDelegates) {
         String userModeFilter = getUserModeFilter(userMode, excludeDelegates);
-        if(filter != null) userModeFilter += ' ' + filter;
+        if (filter != null) userModeFilter += ' ' + filter;
         return getStudySitesCommon(userModeFilter);
     }
 
-    public static String getUserModeFilter(String userMode, Boolean excludeDelegates){
+    public static String getUserModeFilter(String userMode, Boolean excludeDelegates) {
         String filter = ' Clinical_Trial_Profile__c != NULL ' +
-                        ' AND Override_PI_Referral_Status__c != NULL ';
-        if(userMode == CommunityService.USER_MODE_PI){
-            if(excludeDelegates){
-                filter +=       ' AND  Principal_Investigator__c = \'' + CommunityService.getUserContact().Id + '\' ';
-            }
-            else{
-                filter +=       ' AND ( ' +
+                ' AND Override_PI_Referral_Status__c != NULL ';
+        if (userMode == CommunityService.USER_MODE_PI) {
+            if (excludeDelegates) {
+                filter += ' AND  Principal_Investigator__c = \'' + CommunityService.getUserContact().Id + '\' ';
+            } else {
+                filter += ' AND ( ' +
                         '       Principal_Investigator__c = \'' + CommunityService.getUserContact().Id + '\' ' +
-                        '       OR Id IN (\'' + String.join(DelegateService.getDelegatedStudySiteIds(), '\',\'') + '\')'+
+                        '       OR Id IN (\'' + String.join(DelegateService.getDelegatedStudySiteIds(), '\',\'') + '\')' +
                         '   ) ';
             }
 
@@ -138,13 +137,13 @@ public without sharing class StudySiteService {
         return filter;
     }
 
-    public static Study_Site__c getStudySiteForHCPById(Id ssId){
+    public static Study_Site__c getStudySiteForHCPById(Id ssId) {
         List<Study_Site__c> studySites = getStudySitesCommon(
                 CommunityService.USER_MODE_HCP,
                 ' AND Id = \'' + ssId + '\' ',
                 false
         );
-        if(studySites.size() == 0) throw new CommunityServiceException('Data not found');
+        if (studySites.size() == 0) throw new CommunityServiceException('Data not found');
         return studySites[0];
     }
 
@@ -168,27 +167,27 @@ public without sharing class StudySiteService {
         return resList;
     }
 
-    public static List<Study_Site__c> getStudySitesForHCPByTrialId(Id trialId){
+    public static List<Study_Site__c> getStudySitesForHCPByTrialId(Id trialId) {
         String query = 'SELECT ' + String.join(SS_COMMON_FIELDS, ',') +
                 ' FROM Study_Site__c WHERE Clinical_Trial_Profile__c =\'' + trialId + '\'' +
                 '  AND Override_PI_Referral_Status__c != NULL ' +
                 '  AND Override_PI_Referral_Status__c IN (\'' + String.join(STATUS_GROUP_ACCEPTED, '\',\'') + '\')';
         return Database.query(query);
     }
-    public static List<Study_Site__c> getStudySitesWithDelegateLevelFiltered(String filter, Set<String> delegateLevels){
+    public static List<Study_Site__c> getStudySitesWithDelegateLevelFiltered(String filter, Set<String> delegateLevels) {
 
         List<Study_Site__c> ssList = new List<Study_Site__c>();
         Map<Id, String> delegateLevelMap = DelegateService.getPIStudySitesAccessLevelMap();
 
-        for(Study_Site__c site : getStudySitesCommon(CommunityService.USER_MODE_PI, filter, false)){
-            if(!delegateLevelMap.containsKey(site.Id) || delegateLevels.contains(delegateLevelMap.get(site.Id))){
+        for (Study_Site__c site : getStudySitesCommon(CommunityService.USER_MODE_PI, filter, false)) {
+            if (!delegateLevelMap.containsKey(site.Id) || delegateLevels.contains(delegateLevelMap.get(site.Id))) {
                 ssList.add(site);
             }
         }
         return ssList;
     }
     //contains selected filter values
-    public class SiteFilter{
+    public class SiteFilter {
         public String mode;
         public Id trialId;
         public List<Id> trialIds;
@@ -199,8 +198,9 @@ public without sharing class StudySiteService {
         public List<String> searchFields;
         public String sortType = SortOrder.STUDY_SITE_SORT_TYPES[0].value;
         public String additionalFilter;
+        public Boolean onlyAcceptedSites = true;
 
-        public SiteFilter(SiteFilterData filterData){
+        public SiteFilter(SiteFilterData filterData) {
             mode = filterData.mode;
             trialId = filterData.trialId;
             trialIds = filterData.trialIds;
@@ -208,7 +208,7 @@ public without sharing class StudySiteService {
     }
 
     //contains pick list values for SiteFilter
-    public class SiteFilterData{
+    public class SiteFilterData {
         public String mode;
         public Id trialId;
         public List<Id> trialIds;
@@ -219,7 +219,7 @@ public without sharing class StudySiteService {
 
     }
 
-    public static SiteFilterData getSiteFilterData(Id trialId, String mode){
+    public static SiteFilterData getSiteFilterData(Id trialId, String mode) {
         Id userContactId = CommunityService.getUserContact().Id;
 
         SiteFilterData siteFilterData = new SiteFilterData();
@@ -228,8 +228,8 @@ public without sharing class StudySiteService {
         siteFilterData.siteTypes = new List<LabelValueItem>();
         siteFilterData.siteTypes.add(new LabelValueItem(Label.PG_SFS_L_All_Site_Types, null));
         Schema.DescribeFieldResult siteTypesfield = Study_Site__c.Study_Site_Type__c.getDescribe();
-        for (PicklistEntry ple : siteTypesfield.getPicklistValues()){
-            siteFilterData.siteTypes.add(new LabelValueItem(ple.label,ple.value));
+        for (PicklistEntry ple : siteTypesfield.getPicklistValues()) {
+            siteFilterData.siteTypes.add(new LabelValueItem(ple.label, ple.value));
         }
 //        siteFilterData.siteTypes.add(new LabelValueItem(Label.PG_SFS_L_Virtual, 'Virtual'));
 //        siteFilterData.siteTypes.add(new LabelValueItem(Label.PG_SFS_L_Traditional, 'Traditional'));
@@ -240,7 +240,7 @@ public without sharing class StudySiteService {
         siteFilterData.therapeuticAreas.add(new LabelValueItem(Label.PG_SFS_L_All_Therapeutic_Areas, null));
         return siteFilterData;
     }
-    public class StudySiteDistanceWrapper implements Comparable{
+    public class StudySiteDistanceWrapper implements Comparable {
         public Study_Site__c site;
         public Double distance;
         public String formatedDistance;
@@ -250,58 +250,51 @@ public without sharing class StudySiteService {
         public String sortType;
         public Boolean hasPatients;
 
-        public StudySiteDistanceWrapper(Study_Site__c site, HCP_Enrollment__c hcpe, String sortType, Boolean hasPatients){
+        public StudySiteDistanceWrapper(Study_Site__c site, HCP_Enrollment__c hcpe, String sortType, Boolean hasPatients) {
             this.site = site;
             this.distance = DistanceHelper.calculateDistanceTo(site.Site__r);
             this.hasPatients = hasPatients;
             this.formatedDistance = ((distance * 10).round() / 10.0).format() + '&nbsp;' + DistanceHelper.getUnitsOfMeasurementLabel();
-            if(sortType != null && sortType != ''){
+            if (sortType != null && sortType != '') {
                 this.sortType = sortType;
-            }
-            else{
+            } else {
                 this.sortType = 'Distance';
             }
 
             this.siteType = site.Study_Site_Type__c;
             this.hcpe = hcpe;
-            if (hcpe!=null) {
+            if (hcpe != null) {
                 this.actions = new StudyActionsHCP(hcpe).actions;
             } else {
                 this.actions = new StudyActionsHCP(this.site.Clinical_Trial_Profile__r, this.site, null).actions;
             }
         }
-        public Integer compareTo(Object compareTo){
-            StudySiteDistanceWrapper compareToWrapper = (StudySiteDistanceWrapper)compareTo;
+        public Integer compareTo(Object compareTo) {
+            StudySiteDistanceWrapper compareToWrapper = (StudySiteDistanceWrapper) compareTo;
             switch on sortType {
-                when 'Distance'{
-                    if(this.siteType == 'Virtual' && compareToWrapper.siteType == 'Virtual'){
+                when 'Distance' {
+                    if (this.siteType == 'Virtual' && compareToWrapper.siteType == 'Virtual') {
                         return 0;
-                    }
-                    else if(this.siteType == 'Virtual'){
+                    } else if (this.siteType == 'Virtual') {
                         return -1;
-                    }
-                    else if(compareToWrapper.siteType == 'Virtual'){
+                    } else if (compareToWrapper.siteType == 'Virtual') {
                         return 1;
-                    }
-                    else{
-                        return (Integer)(this.distance-compareToWrapper.distance);
+                    } else {
+                        return (Integer) (this.distance - compareToWrapper.distance);
                     }
                 }
-                when 'Distance-virtual-last'{
-                    if(this.siteType == 'Virtual' && compareToWrapper.siteType == 'Virtual'){
+                when 'Distance-virtual-last' {
+                    if (this.siteType == 'Virtual' && compareToWrapper.siteType == 'Virtual') {
                         return 0;
-                    }
-                    else if(this.siteType == 'Virtual'){
+                    } else if (this.siteType == 'Virtual') {
                         return 1;
-                    }
-                    else if(compareToWrapper.siteType == 'Virtual'){
+                    } else if (compareToWrapper.siteType == 'Virtual') {
                         return -1;
-                    }
-                    else{
-                        return (Integer)(this.distance-compareToWrapper.distance);
+                    } else {
+                        return (Integer) (this.distance - compareToWrapper.distance);
                     }
                 }
-                when else{
+                when else {
                     return 0;
                 }
             }
@@ -310,65 +303,67 @@ public without sharing class StudySiteService {
 
     }
 
-    public static List<StudySiteDistanceWrapper> getStudySitesWithDistanceForHCPByTrialId( SiteFilter filter, PaginationData paginationData, Boolean filterEmptyHCPE){
+    public static List<StudySiteDistanceWrapper> getStudySitesWithDistanceForHCPByTrialId(SiteFilter filter, PaginationData paginationData, Boolean filterEmptyHCPE) {
         List<Study_Site__c> siteList = getStudySitesByFilter(filter);
         List<StudySiteDistanceWrapper> result = new List<StudySiteService.StudySiteDistanceWrapper>();
         Set<Id> quueriedTrials = new Set<Id>();
         Set<Id> siteIds = new Set<Id>();
         Set<Id> siteWithPatientsIds = new Set<Id>();
-        for(Study_Site__c site : siteList){
+        for (Study_Site__c site : siteList) {
             quueriedTrials.add(site.Clinical_Trial_Profile__c);
             siteIds.add(site.Id);
         }
         System.debug('queried Trials' + quueriedTrials);
         Map<Id, HCP_Enrollment__c> hcpeMap = new Map<Id, HCP_Enrollment__c>();
         List<HCP_Enrollment__c> enrollments = HCPEnrollmentService.getHCPEnrollmentsForHCPByTrials(new List<Id>(quueriedTrials));
-        for(HCP_Enrollment__c hcpe: enrollments){
+        for (HCP_Enrollment__c hcpe : enrollments) {
             hcpeMap.put(hcpe.Study_Site__c, hcpe);
         }
-        for(Participant_Enrollment__c pe : [
+        for (Participant_Enrollment__c pe : [
                 SELECT Id, Study_Site__c
                 FROM Participant_Enrollment__c
                 WHERE Study_Site__c IN :siteIds
                 AND Participant_Status__c NOT IN (:ParticipantEnrollmentService.PART_STATUS_FAILED_REVIEW,
-                :ParticipantEnrollmentService.PART_STATUS_PENDING_REFERRAL,
-                :ParticipantEnrollmentService.PART_STATUS_EXCLUDED_FROM_REFERRING)]){
+                        :ParticipantEnrollmentService.PART_STATUS_PENDING_REFERRAL,
+                        :ParticipantEnrollmentService.PART_STATUS_EXCLUDED_FROM_REFERRING)
+        ]) {
             siteWithPatientsIds.add(pe.Study_Site__c);
         }
-        for(Study_Site__c site : siteList){
-            if(site.Clinical_Trial_Profile__r != null && (!filterEmptyHCPE || hcpeMap.containsKey(site.Id))) {
-                StudySiteDistanceWrapper siteWrapper = new StudySiteDistanceWrapper(site, hcpeMap.get(site.Id), filter.sortType, siteWithPatientsIds.contains(site.Id) );
+        for (Study_Site__c site : siteList) {
+            if (site.Clinical_Trial_Profile__r != null && (!filterEmptyHCPE || hcpeMap.containsKey(site.Id))) {
+                StudySiteDistanceWrapper siteWrapper = new StudySiteDistanceWrapper(site, hcpeMap.get(site.Id), filter.sortType, siteWithPatientsIds.contains(site.Id));
                 result.add(siteWrapper);
             }
         }
 
-        if(paginationData != null){
+        if (paginationData != null) {
             paginationData.setRecordsCount(result.size());
             List<StudySiteDistanceWrapper> pageList = new List<StudySiteDistanceWrapper>();
-            for(Integer i = paginationData.offset; i < paginationData.endOffset; i++){
+            for (Integer i = paginationData.offset; i < paginationData.endOffset; i++) {
                 pageList.add(result[i]);
             }
             result = pageList;
         }
-            result.sort();
+        result.sort();
         return result;
     }
-    public static List<Study_Site__c> getStudySitesByFilter(SiteFilter filter){
+    public static List<Study_Site__c> getStudySitesByFilter(SiteFilter filter) {
         String filterString = '';
-        if(filter.trialId != null && (filter.trialIds == null || filter.trialIds.isEmpty())){
-            filterString= 'Clinical_Trial_Profile__c =\'' + filter.trialId + '\'   AND ';
-        }
-        else if(filter.trialIds != null && !filter.trialIds.isEmpty()){
-            filterString = 'Clinical_Trial_Profile__c IN (\'' + String.join(filter.trialIds,'\',\'') + '\')   AND ';
-        }
-        else {
+        if (filter.trialId != null && (filter.trialIds == null || filter.trialIds.isEmpty())) {
+            filterString = 'Clinical_Trial_Profile__c =\'' + filter.trialId + '\' ';
+        } else if (filter.trialIds != null && !filter.trialIds.isEmpty()) {
+            filterString = 'Clinical_Trial_Profile__c IN (\'' + String.join(filter.trialIds, '\',\'') + '\') ';
+        } else {
             List<Id> studyIds = TrialService.getAvailableTrialIds(CommunityService.USER_MODE_HCP);
             System.debug('studyIds SSN' + studyIds);
-            filterString = 'Clinical_Trial_Profile__c IN (\'' + String.join(studyIds,'\',\'') + '\')   AND ';
+            filterString = 'Clinical_Trial_Profile__c IN (\'' + String.join(studyIds, '\',\'') + '\') ';
         }
-        filterString += 'Override_PI_Referral_Status__c != NULL ' +
-                '  AND Override_PI_Referral_Status__c IN (\'' + String.join(STATUS_GROUP_ACCEPTED, '\',\'') + '\')';
-        if(filter.siteType != null && filter.siteType != ''){
+        if (filter.onlyAcceptedSites) {
+            filterString += ' AND Override_PI_Referral_Status__c != NULL ' +
+                    '  AND Override_PI_Referral_Status__c IN (\'' + String.join(STATUS_GROUP_ACCEPTED, '\',\'') + '\')';
+        }
+
+        if (filter.siteType != null && filter.siteType != '') {
             filterString += ' AND Study_Site_Type__c = \'' + filter.siteType + '\' ';
         }
 
